--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #DB properties:
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://127.0.0.1:5432/ProjectActivityDb
+db.url=jdbc:postgresql://127.0.0.1:5432/ProjectActivity
 db.username=postgres
-db.password=qwe3qwe3
+db.password=12345
 
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
